--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "vite": "^6.3.5",
     "framer-motion": "^12.14.0",
-    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "lucide-react": "^0.511.0",
+    "react-router-dom": "^7.6.1",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
   },
@@ -24,11 +26,12 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
+    "@tailwindcss/vite": "^4.1.7",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   },
-  "homepage": "https://github.com/almasi-y/rtfolio"
+  "homepage": "https://github.com/almasi-y/my-portfolio/my-portfolio "
 }
