--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,11 +12,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "vite": "^6.3.5",
+    "@tailwindcss/vite": "^4.1.7",
+    "clsx":"^2.1.1",
     "framer-motion": "^12.14.0",
     "react": "^19.1.0",
     "lucide-react": "^0.511.0",
     "react-router-dom": "^7.6.1",
+    "react-icons":"^5.5.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0"
   },
@@ -25,13 +27,16 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "@autoprefixer":"^10.4.21",
     "eslint": "^9.25.0",
     "@tailwindcss/vite": "^4.1.7",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
+    "postcss":"^8.5.3",
+    "tailwindcss":"^4.1.7",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   },
-  "homepage": "https://github.com/almasi-y/my-portfolio/my-portfolio "
+  "homepage": "https://github.com/almasi-y.github.io/my-portfolio"
 }
