--- a/package.json
+++ b/package.json
@@ -13,29 +13,36 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "clsx":"^2.1.1",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.6",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.14.0",
-    "react": "^19.1.0",
     "lucide-react": "^0.511.0",
-    "react-router-dom": "^7.6.1",
-    "react-icons":"^5.5.0",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-on-screen": "^2.1.1",
+    "react-router-dom": "^7.6.1",
+    "react-router-hash-link": "^2.4.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
-    "@autoprefixer":"^10.4.21",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
-    "@tailwindcss/vite": "^4.1.7",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "gh-pages": "^6.3.0",
-    "postcss":"^8.5.3",
-    "tailwindcss":"^4.1.7",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "vite": "^6.3.5"
   },
   "homepage": "https://github.com/almasi-y.github.io/my-portfolio"
